bicep/arm-templates/apim-nsg.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {},
  "variables": {},
  "resources": [
      {
          "type": "Microsoft.Network/networkSecurityGroups",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg",
          "location": "eastus2",
          "tags": {
              "LegalSubEntity": "Walgreen Co",
              "SubDivision": "Global Cloud & Platform Service",
              "Department": "Cloud COE",
              "CostCenter": "Project LEAP 5001",
              "EnvType": "Production",
              "Sensitivity": "Sensitive",
              "SenType": "Not Applicable",
              "CCP": "True",
              "CostCode": "1000608660"
          },
          "properties": {
              "securityRules": [
                  {
                      "name": "Consolidated_2000_Inbound_Rule",
                      "properties": {
                          "description": "walgreens various enterprise infrastructure Protocols:",
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 2000,
                          "direction": "Inbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [
                              "22",
                              "25",
                              "53",
                              "67-69",
                              "80",
                              "88",
                              "111",
                              "123",
                              "135",
                              "137-139",
                              "162",
                              "389",
                              "443",
                              "445",
                              "464",
                              "636",
                              "1389",
                              "1636",
                              "1918",
                              "2389",
                              "2535",
                              "2636",
                              "3268-3269",
                              "3389",
                              "5389",
                              "5647",
                              "5670",
                              "5722",
                              "5985-5986",
                              "7081",
                              "8000",
                              "8080",
                              "8140",
                              "8443",
                              "8888",
                              "8989",
                              "9090",
                              "9389",
                              "9443",
                              "10000",
                              "10002",
                              "18080",
                              "49152-65535"
                          ],
                          "sourceAddressPrefixes": [
                              "10.217.14.0/23",
                              "10.217.75.0/24",
                              "10.124.0.0/23",
                              "10.124.128.0/23",
                              "10.124.192.128/25",
                              "10.124.64.128/25",
                              "10.213.0.0/23",
                              "10.213.128.0/23",
                              "10.217.74.0/24",
                              "172.19.201.0/24",
                              "172.23.12.0/22",
                              "172.31.204.0/22"
                          ],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "ILB_Inbound_Allow",
                      "properties": {
                          "description": "LB-Rule",
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "sourceAddressPrefix": "AzureLoadBalancer",
                          "destinationAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 2002,
                          "direction": "Inbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "OnPrem_Inbound_Allow_01",
                      "properties": {
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "destinationAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 4001,
                          "direction": "Inbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [
                              "192.168.0.0/16",
                              "172.16.0.0/16",
                              "172.18.0.0/16",
                              "172.19.0.0/16",
                              "172.20.0.0/16",
                              "172.21.0.0/16",
                              "172.22.0.0/16",
                              "172.23.0.0/16",
                              "172.24.0.0/16",
                              "172.25.0.0/16",
                              "172.26.0.0/16",
                              "172.27.0.0/16",
                              "172.28.0.0/16",
                              "172.29.0.0/16",
                              "172.30.0.0/16",
                              "172.31.0.0/16",
                              "10.222.0.0/16",
                              "10.223.0.0/16"
                          ],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "WAG_User_Subnets_Inbound_Allow_01",
                      "properties": {
                          "description": "Walgreens User Subnets",
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "destinationAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 4002,
                          "direction": "Inbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [
                              "10.235.0.0/20",
                              "10.235.16.0/23",
                              "10.235.18.0/23",
                              "10.236.0.0/16",
                              "10.237.0.0/16",
                              "10.239.0.0/16",
                              "10.221.54.0/24",
                              "10.238.96.0/20"
                          ],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "VDI_Sensitive_Infrastructure_Support_Subnet",
                      "properties": {
                          "description": "VDI_Sensitive_Infrastructure_Support_Subnet",
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "sourceAddressPrefix": "10.248.96.0/22",
                          "destinationAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 4003,
                          "direction": "Inbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [
                              "22",
                              "135",
                              "137",
                              "138",
                              "139",
                              "445",
                              "80",
                              "443",
                              "3389",
                              "5985-5986"
                          ],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "Deny-one-Inbound",
                      "properties": {
                          "description": "Deny whatever is left",
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "destinationAddressPrefix": "*",
                          "access": "Deny",
                          "priority": 4050,
                          "direction": "Inbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [
                              "10.0.0.0/8",
                              "172.16.0.0/12",
                              "192.168.0.0/16"
                          ],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "Deny-Two-Inbound",
                      "properties": {
                          "description": "Deny Internet",
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "sourceAddressPrefix": "Internet",
                          "destinationAddressPrefix": "*",
                          "access": "Deny",
                          "priority": 4051,
                          "direction": "Inbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "APIM_ServiceTag_Connectivity_Inbound_Allow_01",
                      "properties": {
                          "description": "https://docs.microsoft.com/en-us/azure/api-management",
                          "protocol": "Tcp",
                          "sourcePortRange": "*",
                          "destinationPortRange": "6381-6383",
                          "sourceAddressPrefix": "VirtualNetwork",
                          "destinationAddressPrefix": "VirtualNetwork",
                          "access": "Allow",
                          "priority": 101,
                          "direction": "Inbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "APIM_ServiceTag_Connectivity_Inbound_Allow_02",
                      "properties": {
                          "description": "https://docs.microsoft.com/en-us/azure/api-management",
                          "protocol": "Tcp",
                          "sourcePortRange": "*",
                          "sourceAddressPrefix": "Internet",
                          "destinationAddressPrefix": "VirtualNetwork",
                          "access": "Allow",
                          "priority": 102,
                          "direction": "Inbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [
                              "80",
                              "443"
                          ],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "APIM_ServiceTag_Connectivity_Inbound_Allow_03",
                      "properties": {
                          "description": "https://docs.microsoft.com/en-us/azure/api-management",
                          "protocol": "Tcp",
                          "sourcePortRange": "*",
                          "destinationPortRange": "3443",
                          "sourceAddressPrefix": "ApiManagement",
                          "destinationAddressPrefix": "VirtualNetwork",
                          "access": "Allow",
                          "priority": 103,
                          "direction": "Inbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "Consolidated_2000_Outbound_Rule",
                      "properties": {
                          "description": "walgreens various enterprise infrastructure Protocols",
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "sourceAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 2000,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [
                              "22",
                              "25",
                              "53",
                              "67",
                              "68",
                              "69",
                              "80",
                              "88",
                              "111",
                              "123",
                              "135",
                              "137-139",
                              "161",
                              "389",
                              "443",
                              "445",
                              "464",
                              "636",
                              "1389",
                              "1636",
                              "2389",
                              "2535",
                              "2636",
                              "3268-3269",
                              "3389",
                              "4040-4050",
                              "5985-5986",
                              "5647",
                              "5722",
                              "7080",
                              "8000",
                              "8080",
                              "8980",
                              "8983",
                              "8140",
                              "8443",
                              "8989",
                              "9042",
                              "9090",
                              "9389",
                              "9443",
                              "18080",
                              "49152-65535"
                          ],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": [
                              "10.217.14.0/23",
                              "10.217.75.0/24",
                              "10.124.0.0/23",
                              "10.124.128.0/23",
                              "10.124.192.128/25",
                              "10.124.64.128/25",
                              "10.213.0.0/23",
                              "10.213.128.0/23",
                              "10.217.74.0/24",
                              "172.19.201.0/24",
                              "172.23.12.0/22",
                              "172.31.204.0/22"
                          ]
                      }
                  },
                  {
                      "name": "Consolidated_Microsoft_Servers_rule",
                      "properties": {
                          "description": "Allow outbound to Azure servers",
                          "protocol": "Tcp",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "sourceAddressPrefix": "*",
                          "destinationAddressPrefix": "AzureCloud",
                          "access": "Allow",
                          "priority": 3000,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "OnPrem_Outbound_Allow_01",
                      "properties": {
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "sourceAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 4001,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": [
                              "192.168.0.0/16",
                              "172.16.0.0/16",
                              "172.18.0.0/16",
                              "172.19.0.0/16",
                              "172.20.0.0/16",
                              "172.21.0.0/16",
                              "172.22.0.0/16",
                              "172.23.0.0/16",
                              "172.24.0.0/16",
                              "172.25.0.0/16",
                              "172.26.0.0/16",
                              "172.27.0.0/16",
                              "172.28.0.0/16",
                              "172.29.0.0/16",
                              "172.30.0.0/16",
                              "172.31.0.0/16"
                          ]
                      }
                  },
                  {
                      "name": "Deny-two-Outbound",
                      "properties": {
                          "description": "Deny whatever is left",
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "*",
                          "sourceAddressPrefix": "*",
                          "access": "Deny",
                          "priority": 4052,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": [
                              "10.0.0.0/8",
                              "172.16.0.0/12",
                              "192.168.0.0/16"
                          ]
                      }
                  },
                  {
                      "name": "APIM_ServiceTag_Connectivity_Outbound_Allow_01",
                      "properties": {
                          "description": "https://docs.microsoft.com/en-us/azure/api-management",
                          "protocol": "Tcp",
                          "sourcePortRange": "*",
                          "destinationPortRange": "6381-6383",
                          "sourceAddressPrefix": "VirtualNetwork",
                          "destinationAddressPrefix": "VirtualNetwork",
                          "access": "Allow",
                          "priority": 101,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "APIM_ServiceTag_Connectivity_Outbound_Allow_02",
                      "properties": {
                          "description": "https://docs.microsoft.com/en-us/azure/api-management",
                          "protocol": "Tcp",
                          "sourcePortRange": "*",
                          "sourceAddressPrefix": "VirtualNetwork",
                          "destinationAddressPrefix": "Storage",
                          "access": "Allow",
                          "priority": 102,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [
                              "443",
                              "445"
                          ],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "APIM_ServiceTag_Connectivity_Outbound_Allow_03",
                      "properties": {
                          "description": "https://docs.microsoft.com/en-us/azure/api-management",
                          "protocol": "Tcp",
                          "sourcePortRange": "*",
                          "destinationPortRange": "443",
                          "sourceAddressPrefix": "VirtualNetwork",
                          "destinationAddressPrefix": "AzureActiveDirectory",
                          "access": "Allow",
                          "priority": 103,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "APIM_ServiceTag_Connectivity_Outbound_Allow_04",
                      "properties": {
                          "description": "https://docs.microsoft.com/en-us/azure/api-management",
                          "protocol": "Tcp",
                          "sourcePortRange": "*",
                          "destinationPortRange": "1433",
                          "sourceAddressPrefix": "*",
                          "destinationAddressPrefix": "SQL",
                          "access": "Allow",
                          "priority": 104,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "APIM_ServiceTag_Connectivity_Outbound_Allow_05",
                      "properties": {
                          "description": "https://docs.microsoft.com/en-us/azure/api-management",
                          "protocol": "Tcp",
                          "sourcePortRange": "*",
                          "sourceAddressPrefix": "VirtualNetwork",
                          "destinationAddressPrefix": "EventHub",
                          "access": "Allow",
                          "priority": 105,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [
                              "443",
                              "5671-5672"
                          ],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "APIM_ServiceTag_Connectivity_Outbound_Allow_06",
                      "properties": {
                          "description": "https://docs.microsoft.com/en-us/azure/api-managemen",
                          "protocol": "Tcp",
                          "sourcePortRange": "*",
                          "destinationPortRange": "1186",
                          "sourceAddressPrefix": "VirtualNetwork",
                          "destinationAddressPrefix": "AzureCloud",
                          "access": "Allow",
                          "priority": 106,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "APIM_ServiceTag_Connectivity_Outbound_Allow_07",
                      "properties": {
                          "description": "https://docs.microsoft.com/en-us/azure/api-management",
                          "protocol": "Tcp",
                          "sourcePortRange": "*",
                          "sourceAddressPrefix": "VirtualNetwork",
                          "destinationAddressPrefix": "Internet",
                          "access": "Allow",
                          "priority": 107,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [
                              "25",
                              "587",
                              "25028"
                          ],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  },
                  {
                      "name": "APIM_ServiceTag_Connectivity_Outbound_Allow_08",
                      "properties": {
                          "description": "https://docs.microsoft.com/en-us/azure/api-management",
                          "protocol": "Tcp",
                          "sourcePortRange": "*",
                          "destinationPortRange": "443",
                          "sourceAddressPrefix": "VirtualNetwork",
                          "destinationAddressPrefix": "AzureMonitor",
                          "access": "Allow",
                          "priority": 108,
                          "direction": "Outbound",
                          "sourcePortRanges": [],
                          "destinationPortRanges": [],
                          "sourceAddressPrefixes": [],
                          "destinationAddressPrefixes": []
                      }
                  }
              ]
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/APIM_ServiceTag_Connectivity_Inbound_Allow_01",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "https://docs.microsoft.com/en-us/azure/api-management",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "6381-6383",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 101,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/APIM_ServiceTag_Connectivity_Inbound_Allow_02",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "https://docs.microsoft.com/en-us/azure/api-management",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 102,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                  "80",
                  "443"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/APIM_ServiceTag_Connectivity_Inbound_Allow_03",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "https://docs.microsoft.com/en-us/azure/api-management",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3443",
              "sourceAddressPrefix": "ApiManagement",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 103,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/APIM_ServiceTag_Connectivity_Outbound_Allow_01",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "https://docs.microsoft.com/en-us/azure/api-management",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "6381-6383",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "VirtualNetwork",
              "access": "Allow",
              "priority": 101,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/APIM_ServiceTag_Connectivity_Outbound_Allow_02",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "https://docs.microsoft.com/en-us/azure/api-management",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Storage",
              "access": "Allow",
              "priority": 102,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                  "443",
                  "445"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/APIM_ServiceTag_Connectivity_Outbound_Allow_03",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "https://docs.microsoft.com/en-us/azure/api-management",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureActiveDirectory",
              "access": "Allow",
              "priority": 103,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/APIM_ServiceTag_Connectivity_Outbound_Allow_04",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "https://docs.microsoft.com/en-us/azure/api-management",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1433",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "SQL",
              "access": "Allow",
              "priority": 104,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/APIM_ServiceTag_Connectivity_Outbound_Allow_05",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "https://docs.microsoft.com/en-us/azure/api-management",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "EventHub",
              "access": "Allow",
              "priority": 105,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                  "443",
                  "5671-5672"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/APIM_ServiceTag_Connectivity_Outbound_Allow_06",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "https://docs.microsoft.com/en-us/azure/api-managemen",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "1186",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureCloud",
              "access": "Allow",
              "priority": 106,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/APIM_ServiceTag_Connectivity_Outbound_Allow_07",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "https://docs.microsoft.com/en-us/azure/api-management",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "Internet",
              "access": "Allow",
              "priority": 107,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                  "25",
                  "587",
                  "25028"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/APIM_ServiceTag_Connectivity_Outbound_Allow_08",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "https://docs.microsoft.com/en-us/azure/api-management",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "443",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "AzureMonitor",
              "access": "Allow",
              "priority": 108,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/Consolidated_2000_Inbound_Rule",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "walgreens various enterprise infrastructure Protocols:",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 2000,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                  "22",
                  "25",
                  "53",
                  "67-69",
                  "80",
                  "88",
                  "111",
                  "123",
                  "135",
                  "137-139",
                  "162",
                  "389",
                  "443",
                  "445",
                  "464",
                  "636",
                  "1389",
                  "1636",
                  "1918",
                  "2389",
                  "2535",
                  "2636",
                  "3268-3269",
                  "3389",
                  "5389",
                  "5647",
                  "5670",
                  "5722",
                  "5985-5986",
                  "7081",
                  "8000",
                  "8080",
                  "8140",
                  "8443",
                  "8888",
                  "8989",
                  "9090",
                  "9389",
                  "9443",
                  "10000",
                  "10002",
                  "18080",
                  "49152-65535"
              ],
              "sourceAddressPrefixes": [
                  "10.217.14.0/23",
                  "10.217.75.0/24",
                  "10.124.0.0/23",
                  "10.124.128.0/23",
                  "10.124.192.128/25",
                  "10.124.64.128/25",
                  "10.213.0.0/23",
                  "10.213.128.0/23",
                  "10.217.74.0/24",
                  "172.19.201.0/24",
                  "172.23.12.0/22",
                  "172.31.204.0/22"
              ],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/Consolidated_2000_Outbound_Rule",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "walgreens various enterprise infrastructure Protocols",
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "*",
              "access": "Allow",
              "priority": 2000,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                  "22",
                  "25",
                  "53",
                  "67",
                  "68",
                  "69",
                  "80",
                  "88",
                  "111",
                  "123",
                  "135",
                  "137-139",
                  "161",
                  "389",
                  "443",
                  "445",
                  "464",
                  "636",
                  "1389",
                  "1636",
                  "2389",
                  "2535",
                  "2636",
                  "3268-3269",
                  "3389",
                  "4040-4050",
                  "5985-5986",
                  "5647",
                  "5722",
                  "7080",
                  "8000",
                  "8080",
                  "8980",
                  "8983",
                  "8140",
                  "8443",
                  "8989",
                  "9042",
                  "9090",
                  "9389",
                  "9443",
                  "18080",
                  "49152-65535"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [
                  "10.217.14.0/23",
                  "10.217.75.0/24",
                  "10.124.0.0/23",
                  "10.124.128.0/23",
                  "10.124.192.128/25",
                  "10.124.64.128/25",
                  "10.213.0.0/23",
                  "10.213.128.0/23",
                  "10.217.74.0/24",
                  "172.19.201.0/24",
                  "172.23.12.0/22",
                  "172.31.204.0/22"
              ]
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/Consolidated_Microsoft_Servers_rule",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "Allow outbound to Azure servers",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "AzureCloud",
              "access": "Allow",
              "priority": 3000,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/Deny-one-Inbound",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "Deny whatever is left",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 4050,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
              ],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/Deny-Two-Inbound",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "Deny Internet",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "Internet",
              "destinationAddressPrefix": "*",
              "access": "Deny",
              "priority": 4051,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/Deny-two-Outbound",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "Deny whatever is left",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "access": "Deny",
              "priority": 4052,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
              ]
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/ILB_Inbound_Allow",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "LB-Rule",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "AzureLoadBalancer",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 2002,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/OnPrem_Inbound_Allow_01",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 4001,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [
                  "192.168.0.0/16",
                  "172.16.0.0/16",
                  "172.18.0.0/16",
                  "172.19.0.0/16",
                  "172.20.0.0/16",
                  "172.21.0.0/16",
                  "172.22.0.0/16",
                  "172.23.0.0/16",
                  "172.24.0.0/16",
                  "172.25.0.0/16",
                  "172.26.0.0/16",
                  "172.27.0.0/16",
                  "172.28.0.0/16",
                  "172.29.0.0/16",
                  "172.30.0.0/16",
                  "172.31.0.0/16",
                  "10.222.0.0/16",
                  "10.223.0.0/16"
              ],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/OnPrem_Outbound_Allow_01",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "sourceAddressPrefix": "*",
              "access": "Allow",
              "priority": 4001,
              "direction": "Outbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": [
                  "192.168.0.0/16",
                  "172.16.0.0/16",
                  "172.18.0.0/16",
                  "172.19.0.0/16",
                  "172.20.0.0/16",
                  "172.21.0.0/16",
                  "172.22.0.0/16",
                  "172.23.0.0/16",
                  "172.24.0.0/16",
                  "172.25.0.0/16",
                  "172.26.0.0/16",
                  "172.27.0.0/16",
                  "172.28.0.0/16",
                  "172.29.0.0/16",
                  "172.30.0.0/16",
                  "172.31.0.0/16"
              ]
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/VDI_Sensitive_Infrastructure_Support_Subnet",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "VDI_Sensitive_Infrastructure_Support_Subnet",
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "10.248.96.0/22",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 4003,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [
                  "22",
                  "135",
                  "137",
                  "138",
                  "139",
                  "445",
                  "80",
                  "443",
                  "3389",
                  "5985-5986"
              ],
              "sourceAddressPrefixes": [],
              "destinationAddressPrefixes": []
          }
      },
      {
          "type": "Microsoft.Network/networkSecurityGroups/securityRules",
          "apiVersion": "2020-11-01",
          "name": "gs-nprod-cloudplatforms-sen-eastus2-apim-nsg/WAG_User_Subnets_Inbound_Allow_01",
          "dependsOn": [
              "[resourceId('Microsoft.Network/networkSecurityGroups', 'gs-nprod-cloudplatforms-sen-eastus2-apim-nsg')]"
          ],
          "properties": {
              "description": "Walgreens User Subnets",
              "protocol": "*",
              "sourcePortRange": "*",
              "destinationPortRange": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 4002,
              "direction": "Inbound",
              "sourcePortRanges": [],
              "destinationPortRanges": [],
              "sourceAddressPrefixes": [
                  "10.235.0.0/20",
                  "10.235.16.0/23",
                  "10.235.18.0/23",
                  "10.236.0.0/16",
                  "10.237.0.0/16",
                  "10.239.0.0/16",
                  "10.221.54.0/24",
                  "10.238.96.0/20"
              ],
              "destinationAddressPrefixes": []
          }
      }
  ]
}
